--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,6 +2,7 @@
 	<% @items.each do |item| %>
 	<div class="item_card">
 		<p><%= item.title %></p>
+		<p><%= link_to "Add to Cart", carts_path %></p>
 	</div>
 	<% end %>
 </div>
