changed routes to reflect singular mention of cart in routes

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,7 +2,7 @@
 	<% @items.each do |item| %>
 	<div class="item_card">
 		<p><%= item.title %></p>
-		<p><%= link_to "Add to Cart", carts_path(item_id: item.id), method: :post %></p>
+		<p><%= link_to "Add to Cart", cart_path(item_id: item.id), method: :post %></p>
 	</div>
 	<% end %>
 </div>
