update view with item quantity.

--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,9 +1,12 @@
 <%  @items.each do |item| %>
+<div class="item-#{<%= item.id %>}">
 <%= image_tag(item.image, class: "item_thumbnail") %>
 <h5><%= item.title %></h5>
 <p><%= item.description %></p>
 <p>$<%= item.price %></p>
+<p><%= item.quantity %></p>
 <%= link_to "Remove Item", cart_path(id: item.id), method: :delete %>
+</div>
 <% end %>
 
 <p>Total: <%= @cart.total %></p>
