--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -5,6 +5,11 @@
 <p><%= item.description %></p>
 <p>$<%= item.price %></p>
 <p><%= @cart.quantity(item) %></p>
+<%= form_tag(cart_path, method: :patch) do %>
+  <%= label_tag("Quantity") %>
+  <%= text_field_tag("Quantity", "#{@cart.quantity(item)}") %>
+  <%= submit_tag("Update") %>
+<% end %>
 <%= link_to "Remove Item", cart_path(id: item.id), method: :delete %>
 </div>
 <% end %>
