--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,13 +4,13 @@
 <h5><%= item.title %></h5>
 <p><%= item.description %></p>
 <p>$<%= item.price %></p>
-<p><%= @cart.quantity(item) %></p>
 <%= form_tag(cart_path, method: :patch) do %>
   <%= hidden_field_tag(:item_id, item.id) %>
   <%= label_tag("Quantity") %>
   <%= text_field_tag("Quantity", "#{@cart.quantity(item)}") %>
   <%= submit_tag("Update") %>
 <% end %>
+<p>Item Subtotal: $<%= @cart.subtotal(item) %></p>
 <%= link_to "Remove Item", cart_path(id: item.id), method: :delete %>
 </div>
 <% end %>
