Add item specific class selector

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,6 @@
 <div>
 	<% @items.each do |item| %>
-	<div class="item_card">
+	<div class="item_card index_item_<%= item.id %>">
 		<p><%= item.title %></p>
 		<p><%= link_to "Add to Cart", cart_path(item_id: item.id), method: :post %></p>
 	</div>
