--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -22,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Sitar Center</a>
+          <a class="navbar-brand" href="/">Music Store</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -48,10 +48,6 @@
       </div><!-- /.container-fluid -->
     </nav>
   </header>
-
-
-  <%= link_to "View Cart", cart_path %>
-
   <%= yield %>
 </body>
 </html>
