Fixed navbar cart title.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/cart">Cart</a></li>
+            <li><a href="/cart">View Cart</a></li>
             <li class="dropdown">
             </li>
           </ul>
