--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,8 +41,7 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/cart">View Cart</a></li>
-            <li class="dropdown">
-            </li>
+            <li><a href="/login">Login</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
