show page for item generated and working. not yet styled

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -7,7 +7,7 @@
 
 			<div class="item_card index_item_<%= item.id %>">
 				<img class="item-card-img" src="<%= item.image %>" alt="">
-				<h3><%= item.title %></h3>
+				<h3><%= link_to item.title, item_path(item) %></h3>
 				<p><%= link_to "Add to Cart", cart_path(item_id: item.id), method: :post %></p>
 				<div class="items-break-line"></div>
 			</div>
