update new user form and test

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,9 +5,11 @@
   <%= f.label :password %>
   <%= f.password_field :password %>
 
-  <%= f.label :full_name %>
+  <%= f.label :full_name, "Full Name" %>
   <%= f.text_field :full_name %>
 
   <%= f.label :address %>
   <%= f.text_field :address %>
+
+  <%= f.submit "Create Account" %>
 <% end %>
