--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(:session, url: login_path) do |f| %>
+<%= form_for(@user) do |f| %>
   <%= f.label :username %>
   <%= f.text_field :username %>
 
