add flash message user show page information

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,9 @@
       </div><!-- /.container-fluid -->
     </nav>
   </header>
+  <% flash.each do |type, message| %>
+    <%= sanitize(message) %>
+  <% end %>
   <%= yield %>
 </body>
 </html>
