--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,12 @@
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/cart">View Cart</a></li>
+            <% if current_user %>
+            <li><a href="/logout">Logout</a></li>
+            <li><%= current_user.username %></li>
+            <% else %>
             <li><a href="/login">Login</a></li>
+            <% end %>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
