--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,10 +34,9 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Categories <span class="caret"></span></a>
               <ul class="dropdown-menu">
-              <% all_for_nav.each do %>
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
+              <% all_for_nav.each do |category| %>
+                <li><%= link_to "#{category.title.capitalize}", category_path(category.title) %></li>
+              <% end %>
               </ul>
             </li>
           </ul>
