Item names on the index now link to show page

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,7 +2,7 @@
 <%= @category.title %>
   <% @category.items.each do |item| %>
   <div class="item_card">
-    <p><%= item.title %></p>
+    <p><%= link_to "#{item.title}", item_path(item) %></p>
   </div>
   <% end %>
 </div>
