Styled show page slightly.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,3 +39,16 @@
 .center-text {
   text-align: center;
 }
+.item_info {
+  margin-left: 5%;
+}
+.item_image {
+  margin-left: 30%;
+}
+.cart {
+  border: 1px solid black;
+  outline-color: red;
+}
+.cart_show {
+  margin-top: 10%;
+}
