--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -6,6 +6,7 @@
 		Order id:<%= order.id %><br>
 		<%= order.created_at %>
 	</li>
+	<%= link_to "View Order", order_path(order) %>
 <% end %>
 </ul>
 
