--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -4,7 +4,8 @@
 	<%= @items.each do |item| %>
 	<li>
 		Title: <%= item.title %>
-		Quantity: <%= order.item_quantity(item) %>
+		Quantity: <%= @order.item_quantity(item) %>
+		Subtotal: <%= @order.item_subtotal(item) %>
 	</li>
 	<% end %>
 </ul>
