Add total order price

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,7 +1,7 @@
 <h1>Order <%= @order.id %></h1>
 
 <ul>
-	<%= @items.each do |item| %>
+	<% @items.each do |item| %>
 	<li>
 		Title: <%= item.title %>
 		Quantity: <%= @order.item_quantity(item) %>
@@ -10,3 +10,7 @@
 	</li>
 	<% end %>
 </ul>
+
+<h5>Total Price: <%= @order.total_order_price %></h5>
+<h5>Order Status: <%= @order.status %></h5>
+
