Add info to orders show

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -13,4 +13,10 @@
 
 <h5>Total Price: <%= @order.total_order_price %></h5>
 <h5>Order Status: <%= @order.status %></h5>
+<h5>Order Submitted: <%= @order.created_at %></h5>
+<% if @order.completed? %>
+	<p>Order completed at <%= @order.updated_at %></p>
+<% elsif @order.cancelled? %>
+	<p>Order cancelled at <%= @order.updated_at %></p>
+<% end %>
 
