--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,9 +8,8 @@
 
   <div class="col-md-4">
     <h1 class="h-tag-no-top-margin-title"> <%= @item.title %></h1>
-    <h4>Price: $<%= @item.price %> each</h4>
-    <p class="btn btn-default" >DUMMY BUTTON</p><br>
-    <p class="btn btn-default" >DUMMY BUTTON</p>
+    <h4>Price: $<%= @item.formatted_price %> each</h4>
+    <%= link_to "Add to Cart", cart_path(item_id: @item.id), method: :post, class: "cart-button btn btn-outline-info" %><br>
 
   </div>
   <div class="col-md-4">
