Made items index a little nicer for sal.

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,5 @@
 <div>
-<h1 class="center-text">ALL ITEMS</h1>
+<h1 class="center-text">Current Inventory</h1>
 	<div class="row items-row">
 		<% @items.each do |item| %>
 		<div class="col-md-3 item-card">
