--- a/app/views/admin/admin/show.html.erb
+++ b/app/views/admin/admin/show.html.erb
@@ -13,8 +13,14 @@
                     <%= column_chart Order.orders_by_day_of_week %>
                 </div>
                 <div class="col-md-4">
+                    <h4 class="graph-title"># of Items by Category</h4>
+                    <%= pie_chart Category.items_in_category %>
                 </div>
             </div>
         </div>
+    </div>
+
+    <div class="control-panel-wrapper">
+        
     </div>
 </div>
