--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
 <h1><%= @user.username %></h1>
 <p><%= @user.full_name %></p>
 <p><%= @user.address %></p>
+<%= link_to 'Edit User', edit_user_path(@user) %>
