--- a/app/views/admin/admin/show.html.erb
+++ b/app/views/admin/admin/show.html.erb
@@ -19,8 +19,15 @@
             </div>
         </div>
     </div>
-
     <div class="control-panel-wrapper">
-        
+        <div class="row">
+            <div class="col-xs-6 col-md-4">
+                <%= link_to "Add New Item", new_admin_item_path, type: "button", class: "btn btn-success" %>
+            </div>
+            <div class="col-xs-6 col-md-4">
+            </div>
+            <div class="col-xs-6 col-md-4">
+            </div>
+        </div>
     </div>
 </div>
