Made admin button block width

--- a/app/views/admin/admin/show.html.erb
+++ b/app/views/admin/admin/show.html.erb
@@ -22,7 +22,7 @@
     <div class="control-panel-wrapper">
         <div class="row">
             <div class="col-xs-6 col-md-4">
-                <%= link_to "Add New Item", new_admin_item_path, type: "button", class: "btn btn-success" %>
+                <%= link_to "Add New Item", new_admin_item_path, type: "button", class: "btn btn-success btn-large btn-block" %>
             </div>
             <div class="col-xs-6 col-md-4">
             </div>
