--- a/app/views/admin/admin/show.html.erb
+++ b/app/views/admin/admin/show.html.erb
@@ -25,6 +25,7 @@
                 <%= link_to "Add New Item", new_admin_item_path, type: "button", class: "btn btn-success" %>
             </div>
             <div class="col-xs-6 col-md-4">
+              <%= link_to 'Edit Admin', edit_user_path(@user) %>
             </div>
             <div class="col-xs-6 col-md-4">
             </div>
