--- a/app/views/admin/admin/show.html.erb
+++ b/app/views/admin/admin/show.html.erb
@@ -1,21 +1,30 @@
 <div class="dashboard-wrapper">
     <h1>Admin Dashboard</h1>
+    <hr>
+    <br>
     <div class="metrics-wrapper">
-        <h3>Metrics</h3>
-        <div class="jumbotron">
-            <div class="row">
-                <div class="col-md-4">
-                    <h4 class="graph-title"># of Orders by Month</h4>
-                    <%= line_chart Order.orders_by_month %>
+        <br>
+        <div class="container">
+            <div class="card">
+                <div class="card-header">
+                    <h3>Metrics</h3>
                 </div>
-                <div class="col-md-4">
-                    <h4 class="graph-title"># of Orders by Day</h4>
-                    <%= column_chart Order.orders_by_day_of_week %>
+                <div class="card-block">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h4 class="card-title graph-title"># of Orders by Month</h4>
+                        <%= line_chart Order.orders_by_month, class: 'card-text' %>
+                    </div>
+                    <div class="col-md-4">
+                        <h4 class="card-header graph-title"># of Orders by Day</h4>
+                        <%= column_chart Order.orders_by_day_of_week, class: 'card-text' %>
+                    </div>
+                    <div class="col-md-4">
+                        <h4 class="card-header graph-title"># of Items by Category</h4>
+                        <%= pie_chart Category.items_in_category, class: 'card-text' %>
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <h4 class="graph-title"># of Items by Category</h4>
-                    <%= pie_chart Category.items_in_category %>
-                </div>
+            </div>
             </div>
         </div>
     </div>
@@ -31,3 +40,5 @@
         </div>
     </div>
 </div>
+
+
