--- a/app/views/admin/admin/show.html.erb
+++ b/app/views/admin/admin/show.html.erb
@@ -34,7 +34,7 @@
                 <%= link_to "Add New Item", new_admin_item_path, type: "button", class: "btn btn-success btn-large btn-block" %>
             </div>
             <div class="col-xs-6 col-md-4">
-              <%= link_to 'Edit Admin', edit_user_path(@user) %>
+              <%= link_to 'Edit Admin', edit_user_path(@user), type: "button", class: "btn btn-success btn-large btn-block" %>
             </div>
             <div class="col-xs-6 col-md-4">
             </div>
