--- a/app/views/admin/admin/show.html.erb
+++ b/app/views/admin/admin/show.html.erb
@@ -24,12 +24,21 @@
         
     </div>
 
-    <div>
+    <div class="dashboard_orders_header">
+        <p><%= link_to "All Orders", admin_dashboard_path %>: <%= Order.count %></p>
+        <p><%= link_to "Ordered Orders", '/dashboard?orders=ordered' %>: <%= Order.ordered.count %></p>
+        <p><%= link_to "Paid Orders", '/dashboard?orders=paid' %>: <%= Order.paid.count %></p>
+        <p><%= link_to "Cancelled Orders", '/dashboard?orders=cancelled' %>: <%= Order.cancelled.count %></p>
+        <p><%= link_to "Completed Orders", '/dashboard?orders=completed' %>: <%= Order.completed.count %></p>
+    </div>
+
+    <div class="dashboard_orders">
         <% @orders.each do |order| %>
             Id: <%= order.id %>
             Created At: <%= order.created_at %>
             Updated At: <%= order.updated_at %>
             Status: <%= order.status %>
+            <%= link_to "View Order", order_path(order) %>
         <% end %>
     </div>
 </div>
