--- a/app/views/admin/admin/show.html.erb
+++ b/app/views/admin/admin/show.html.erb
@@ -28,6 +28,8 @@
             </div>
         </div>
     </div>
+    <br>
+    <br>
     <div class="control-panel-wrapper">
         <div class="row">
             <div class="col-xs-6 col-md-4">
@@ -37,6 +39,7 @@
               <%= link_to 'Edit Admin', edit_user_path(@user), type: "button", class: "btn btn-success btn-large btn-block" %>
             </div>
             <div class="col-xs-6 col-md-4">
+                <%= link_to 'View Items', admin_items_path, type: "button", class: "btn btn-success btn-large btn-block" %>
             </div>
         </div>
     </div>
