Fix update routes to be restful

--- a/app/views/admin/admin/show.html.erb
+++ b/app/views/admin/admin/show.html.erb
@@ -61,13 +61,13 @@
             Status: <%= order.status %>
             <%= link_to "View Order", order_path(order) %>
             <% if (order.paid? || order.ordered?) %>
-                <%= link_to "Cancel", cancel_order_path(id: order.id), method: :patch %>
+                <%= link_to "Cancel", order_path(id: order.id, make_status: 'cancelled'), method: :patch %>
             <% end %>
             <% if order.ordered? %>
-                <%= link_to "Mark as Paid", mark_paid_order_path(id: order.id), method: :patch %>
+                <%= link_to "Mark as Paid", order_path(id: order.id, make_status: 'paid'), method: :patch %>
             <% end %>
             <% if order.paid? %>
-                <%= link_to "Mark as Completed", mark_completed_order_path(id: order.id), method: :patch %>
+                <%= link_to "Mark as Completed", order_path(id: order.id, make_status: 'complete'), method: :patch %>
             <% end %>
         </div>
         <% end %>
